--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.2",
     "eslint-utils": "^1.4.2",
+    "http-proxy-middleware": "^0.20.0",
     "prettier": "^1.18.2",
     "typescript": "^3.7.4"
   },
