--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,8 @@
     "module": "esnext",
     "moduleResolution": "node",
     "jsx": "react",
-    "typeRoots": ["../node_modules/@types", "../@types"],
-    "types": ["styled-components", "react", "react-dom"],
+    "typeRoots": ["./node_modules/@types"],
+    "types": [],
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": false,
     "forceConsistentCasingInFileNames": true,
