--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "moduleResolution": "node",
     "jsx": "react",
     "typeRoots": ["./node_modules/@types"],
-    "types": [],
+    "types": ["@types/socket.io-client"],
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": false,
     "forceConsistentCasingInFileNames": true,
