--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [10.x]
+        node-version: [12.x]
 
     steps:
       - uses: actions/checkout@v1
@@ -19,10 +19,10 @@ jobs:
       - name: Set Node.js
         uses: actions/setup-node@master
         with:
-          node-version: 10.x
+          node-version: 12.x
 
       - name: Install Dependencies
-        run: yarn install --prod
+        run: yarn install --prod --pure-lockfile
 
       - name: Build for GitHub
         run: yarn build
