--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^13.1.1",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
+    "@types/socket.io": "^2.1.4",
     "@types/socket.io-client": "^1.4.32",
     "@types/styled-components": "^4.4.1",
     "babel-eslint": "^10.0.2",
