--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
     "target": "es6",
     "module": "esnext",
     "moduleResolution": "node",
+    "typeRoots": ["./node_modules/@types"],
+    "types": ["styled-components", "react", "react-dom"],
     "jsx": "react",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": false,
