--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
 
       - name: Set Node.js
         uses: actions/setup-node@master
@@ -32,4 +34,4 @@ jobs:
         with:
           ACCESS_TOKEN: ${{ secrets.SHARADES_CLIENT_DEPLOY }}
           BRANCH: gh-pages
-          FOLDER: public
+          FOLDER: build
